0.10:

0.9:
  add /server-status
  request_done, socket_error and cgiproxy_read0 now print the number of
    received and sent bytes in this request, to make traffic accounting
    for CGIs and broken downloads possible
  you can now say -C+x and then all executable files will be run as CGI.
    Also works for index.html.  Please note that this is dangerous in
    case you copy or serve files off a FAT or similar filesystem, where
    Linux per default marks every file executable.  That's why gatling
    has a simple sanity check that only allows scripts starting with #!
    or ELF binaries.
  add "bench", a small benchmark util in the spirit of apachebench
  make bzip2 support optional (and disable it per default)
  add Date header
  add MIME magic (will try to identify file type by looking at first bytes)
    this is only used if the extension is not conclusive
  also log the GET arguments in the log for CGI requests
  allow .htaccess_global
  dl can now follow 301, 302 and 302
  fix .gz handling
  tell download accelerators that we support ranges
  add acc (convert gatling log to one-line-per-request)
  add hcat (like cat, but sorts multilog style @[timestamp] filenames
    right)
  add referrer (extract nice external referrer statistics from acc
    output, before or after tai64nlocal)
  use setresuid and setresgid if available
  for HEAD, suppress body of error messages (Andreas Krennmair)
  use radix sort in readfrag instead of qsort for big speedup
  add support for external mime types file (gatling -m /etc/mime.types)
  switch to binary mode in dl in FTP mode
  fix memory leak in proxy_connection() (Johannes Vetter)
  dl: when printing an ftp directory listing, filter \r
  dl: in -i mode, don't complain if utime fails
  attempt to fix POST
  make dl print some statistics if stderr is a TTY

0.8:
  fix pipelining bug
  send all HTTP headers als HTTP_FOO=bar environment to CGIs
  gcc 4 unsigned char* <-> char* cleanups